Fix gray top gap on post card images by zeroing img padding

--- a/_sass/gallery.scss
+++ b/_sass/gallery.scss
@@ -208,6 +208,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    padding:0;
 }
 
 /* Info section at the bottom of thumbnail */
